--- a/src/exercise1.html
+++ b/src/exercise1.html
@@ -25,7 +25,7 @@
     </tr>
 </table>
 
-<table border="0">
+<table border="0" class="table2">
     <tr>
         <td colspan="2">
             <h1>The roads that brought us here</h1>
@@ -33,34 +33,34 @@
         </td>
     </tr>
     <tr>
-        <td>
+        <td class="td_image_width">
             <img src="../public/images/image11.jpg" alt="Calgary's urban evolution">
         </td>
-        <td>
+        <td class="box1"><div class="box_text_color">
             <h2>Calgary's urban evolution</h2>
             <p>A university and a city growing together side by side.</p>
             <a href="https://ucalgary.ca/about/our-history/calgarys-urban-evolution">Read more</a>
-        </td>
+        </div></td>
     </tr>
     <tr>
-        <td>
+        <td class="box2"><div class="box_text_color">
             <h2>Changing face of campus</h2>
             <p>Creating an intellectual hub to empower the problem-solvers of the future, today.</p>
             <a href="https://ucalgary.ca/about/our-history/changing-face-campus">Read more</a>
-        </td>
-        <td>
+        </div></td>
+        <td class="td_image_width">
             <img src="../public/images/image21.jpg" alt="Changing face of campus">
         </td>
     </tr>
     <tr>
-        <td>
+        <td class="td_image_width">
             <img src="../public/images/image31.jpg" alt="Culture and society">
         </td>
-        <td>
+        <td class="box3"><div class="box_text_color">
             <h2>Culture and society</h2>
             <p>Fueling the cultural and social transformation of a city and region.</p>
             <a href="https://ucalgary.ca/about/our-history/culture-and-society">Read more</a>
-        </td>
+        </div></td>
     </tr>
 </table>
 
